# src/main/java/com/aspy/portfoliogenerator/infraestructure/service/company/CompanyServiceImpl.java
@@ -1,0 +1,23 @@
+package com.aspy.portfoliogenerator.infraestructure.service.company;
+
+import com.aspy.portfoliogenerator.domain.entity.company.Company;
+import com.aspy.portfoliogenerator.domain.services.company.CompanyService;
+import com.aspy.portfoliogenerator.infraestructure.jpa.CompanyJpa;
+import com.aspy.portfoliogenerator.infraestructure.mapper.company.CompanyJpaMapper;
+import com.aspy.portfoliogenerator.infraestructure.repository.company.CompanieJpaRepository;
+import lombok.RequiredArgsConstructor;
+import org.springframework.stereotype.Service;
+
+@Service
+@RequiredArgsConstructor
+public class CompanyServiceImpl implements CompanyService {
+
+  private final CompanieJpaRepository companieJpaRepository;
+
+  @Override
+  public Company getCompaniesById(Integer id) {
+    CompanyJpa companyJpa = companieJpaRepository.getCompaniesToId(id);
+
+    return CompanyJpaMapper.INSTANCE.toCompanies(companyJpa);
+  }
+}
